<resources>

    <string name="app_name">慧生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_public">公共设施</string>
    <string name="main_tab_frd">邻里</string>
    <string name="main_tab_life">社区生活</string>
    <string name="main_tab_more">更多</string>

    <string name="merchant_all">全部商家</string>
    <string name="merchant_sale">优惠商家</string>
    <string name="title_activity_group_buy_image_details">GroupBuyImageDetailsActivity</string>
    <string name="title_activity_today_new_order">TodayNewOrderActivity</string>
    <string name="title_activity_voucher_help">VoucherHelpActivity</string>
    <string name="no_data">没有合适的数据显示</string>
    <string name="title_activity_order">OrderActivity</string>
    
      <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>